# Neural-Quantum-States-for-2D-Anharmonic-Systems-via-Stochastic-Reconfiguration

./: .gitignore  README.md  nqs_sr_2d_monolithic.py  pyproject.toml  requirements.txt
